--- a/index.html
+++ b/index.html
@@ -6,5 +6,13 @@
 	</head>
 	<body>
 	
+		<div class="hero-image">
+		  <div class="hero-text">
+			<h1 style="font-size:50px">Enchanted Skies</h1>
+			<p>This is the unofficial WIKI.</p>
+			<button>HAI</button>
+		  </div>
+		</div>
+		
 	</body>
 </html>
