--- a/index.html
+++ b/index.html
@@ -3,54 +3,61 @@
 	<head>
 		<style>
 		body, html {
-    height: 100%;
-    margin: 0;
-}
+			height: 100%;
+			margin: 0;
+          font-family: arial;
+		}
 
-.hero-image {
-  background-image: url("https://enchanted-skies.net/styles/uix/uix/logo.png");
-  height: 100%;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  position: relative;
-}
+		.hero-image {
+		  background-image: url("https://enchanted-skies.net/styles/uix/uix/logo.png");
+		  height: 100%;
+		  background-position: center;
+		  background-repeat: no-repeat;
+		  background-size: cover;
+		  position: relative;
+		}
 
-.hero-text {
-  text-align: center;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  color: white;
-}
+		.hero-text {
+		  text-align: center;
+		  position: absolute;
+		  top: 50%;
+		  left: 50%;
+		  transform: translate(-50%, -50%);
+		  color: white;
+		  background-color: rgba(0,0,0,0.5);
+		  padding: 30px;
+          transition: 0.3s;
+			
+		}
+        
+          .hero-text:hover{
+             background-color: rgba(0,0,0,0.7)
+          }
 
-.hero-text button {
-  border: none;
-  outline: 0;
-  display: inline-block;
-  padding: 10px 25px;
-  color: black;
-  background-color: #ddd;
-  text-align: center;
-  cursor: pointer;
-}
+		.hero-text button {
+		  border: none;
+		  outline: 0;
+		  display: inline-block;
+		  padding: 10px 25px;
+		  color: black;
+		  background-color: #ddd;
+		  text-align: center;
+		  cursor: pointer;
+		}
 
-.hero-text button:hover {
-  background-color: #555;
-  color: white;
-}
+		.hero-text button:hover {
+		  background-color: #555;
+		  color: white;
+		}
 		</style>
 	</head>
 	<body>
-	
 		<div class="hero-image">
 		  <div class="hero-text">
 			<h1 style="font-size:50px">Enchanted Skies</h1>
-			<p>This is the unofficial WIKI.</p>
-			<button>HAI</button>
+			<p>This is the unofficial WIKI written by BillyCheese101.</p>
+            <p>Discord: BillyCheese101#4759</p>
 		  </div>
 		</div>
-		
 	</body>
 </html>
