--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
 		  <div class="hero-text">
 			<h1 style="font-size:50px">Enchanted Skies</h1>
 			<p>This is the unofficial WIKI written by BillyCheese101.</p>
-            <p>Discord: BillyCheese101#4759</p>
+			  <p>Message me on discord any features you think need adding!</p>
+            		<p>Discord: BillyCheese101#4759</p>
 		  </div>
 		</div>
 	</body>
