--- a/index.html
+++ b/index.html
@@ -142,12 +142,12 @@
             <li>
               <button class="accordion">Spawners</button>
               <div class="panel">
-		<h1>The spawners are tiered as to how difficult it is for their grinder to be made</h1>
+		      <h1>The spawners are tiered as to how difficult it is for their grinder to be made</h1>
                 <p>Tier 1(FREE) - Snow Golem(2k), Cave spider(3k), Zombie(1k)
                 <p>Tier 2(40K) - Sheep(10k), Silverfish(15k), Blaze(8k)</p>
                 <p>Tier 3(300k) - Cow(40k), Slime(40k), Endermite(55k)</p>
                 <p>Tier 4(800k) -Creeper(100k), Mooshroom(170k), Guardian(200k)</p>
-                <p>Tier 5(2.5mill) - Squid, Iron Golem , Ghast</p>
+                <p>Tier 5(2.5mill) - Squid(300k), Iron Golem(500k) , Ghast(800k)</p>
               </div>
 
             </li>
