--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
                 <p><span style="color:aqua;">Water</span>: Silverfish, squid and guardian</p>
                 <p><span style="color:green;">Earth</span>: Cow, slime and creeper</p>
                 <p><span style="color:grey;">Air</span>: Chicken, bat and enderman</p>
-                  <button id="elementalCraftingBTN">Open Modal</button>
+                  <button id="elementalCraftingBTN">Elemental Crafting</button>
               </div>
             </li>
             
