--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
+      <title>EnchantedSkies WIKI</title>
 		<style>
 		body, html {
 			height: 100%;
@@ -216,7 +217,7 @@
                 <p><span style="color:aqua;">Water</span>: Silverfish, squid and guardian</p>
                 <p><span style="color:green;">Earth</span>: Cow, slime and creeper</p>
                 <p><span style="color:grey;">Air</span>: Chicken, bat and enderman</p>
-                  <button id="elementalCraftingBTN">Elemental Crafting</button>
+                  <button id="elementalCraftingBTN">Elemenatal Crafting Info</button>
               </div>
             </li>
             
@@ -325,8 +326,10 @@
       <h2>Elemental Crafting</h2>
     </div>
     <div class="modal-body">
-      <p>Some text in the Modal Body</p>
-      <p>Some other text...</p>
+      <p><span style="color:red;">Fire</span>: When blocking with the weapon and an arrow hits you, a flaming arrow is sent back at your attacker, smoldering them!</p>
+      <p><span style="color:aqua;">Water</span>: A diamond axe that does 'pure damage', this damage ignores potion effects and armour, additionally on a cooldown lightning is summoned from the gods to smite your enemy!</p>
+      <p><span style="color:green;">Earth</span>: A diamond shovel that tosses your attacker into the air and gives them nausea and weakness, truely disorienting.</p>
+      <p><span style="color:grey;">Air</span>: A magical iron sword which can be used to throw a magical pearl that you ride into battle on!</p>
     </div>
     <div class="modal-footer">
       <h3><br></h3>
