--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
 			<h1 style="font-size:50px">Enchanted Skies</h1>
 			<p>This is the unofficial WIKI written by BillyCheese101.</p>
 			  <p>Message me on discord any features you think need adding!</p>
-              <p>Discord: BillyCheese101#4759</p>
+			  <p>Discord: <span style="color:lime">BillyCheese101#4759</span></p>
 		  </div>
 		</div>
         
